--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <header>
+        <div class="menubutton">&#9776;</div>
+        <nav>
+
         <nav>
             <ul>
                 <li><a href="ueber-uns.html">Über uns</a></li>
                 <li><a href="buchen.html">Buchen</a></li>
                 <li><a href="entdecken.html">Entdecken</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
     </header>
@@ -53,16 +57,6 @@
    
     
     <footer>
-        <div id="anreise">
-            <h2>Anreise</h2>
-        </div>
-
-        <div id="kontakt">
-            <h2>Kontakt</h2>
-        </div>
-        <div id="info">
-            <h2>Info</h2>
-        </div>
     </footer>
     <script src="script.js"></script>
 </body>
