--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
 </head>
 <body>
     <header>
-        <div class="menubutton">&#9776;</div>
         <nav>
 
         <nav>
             <ul>
-                <li><a href="ueber-uns.html">Über uns</a></li>
-                <li><a href="buchen.html">Buchen</a></li>
-                <li><a href="entdecken.html">Entdecken</a></li>
+                <li><a href="ueber-uns.html">Erlebnisse</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
@@ -27,6 +24,7 @@
             <img src="illu.svg" alt="Hintergrundbild">
             <img id="popupButton" src="button.svg" alt="Button" class="custom-button"style= "width: 140px; height: 140px;">
             <img id="popupButton2" src="button.svg" alt="Button" class="custom-button2"style= "width: 140px; height: 140px;">
+            <img id="popupButton3" src="button.svg" alt="Button" class="custom-button3"style= "width: 140px; height: 140px;">
         </div>
     </div>
     <div id="popupContainer">
@@ -35,12 +33,20 @@
             <center><button id="closeButton">Schließen</button></center>
         </div>
     </div>
+
     <div id="popupContainer2">
         <div id="popupContent2">
-            <p>Säntis – das Hotel
-                Am Fusse des Säntis steht das Drei-Sterne-Superior-Hotel «Säntis – das Hotel». Modern, inspirierend und charmant. Übernachten Sie auf der Schwägalp und entspannen Sie in unserer Wellnessoase mit Blick auf den zauberhaften Weidwald.
+            <p>Am Fusse des Säntis steht das Drei-Sterne-Superior-Hotel «Säntis – das Hotel». Modern, inspirierend und charmant. Übernachten Sie auf der Schwägalp und entspannen Sie in unserer Wellnessoase mit Blick auf den zauberhaften Weidwald.
             </p>
             <center><button id="closeButton2">Schließen</button></center>
+        </div>
+    </div>
+
+        <div id="popupContainer3">
+            <div id="popupContent3">
+                <p>Sie schreiten durch die Geschichte geheimnisvoller Moore, holen tief Luft in einzigartigen Weidwäldern, beobachten seltene Tiere und zauberhafte Pflanzen, erfahren auf Schritt und Tritt Faszinierendes über das Leben und die Kultur auf der Alp, tauchen ein in die erhabene Geologie des Säntismassivs und die wundersame Erdgeschichte vor einer der schönsten Naturkulisse Europas.
+                </p>
+                <center><button id="closeButton3">Schließen</button></center>
         </div>
     </div>
 
