--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -3,50 +3,50 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
-    <title>Über uns</title>
+    <title>Erlebnisse rund um den Säntis</title>
   </head>
   <body>
     
     <header>
-        <div class="menubutton">&#9776;</div>
         <nav>
-
+            <a href="index.html" class="back-to-home">&#9666; Zurück zur Startseite</a>
       <nav>
         <ul class="menu">
-            <li><a href="ueber-uns.html">Über uns</a></li>
-            <li><a href="buchen.html">Buchen</a></li>
-            <li><a href="entdecken.html">Entdecken</a></li>
+            <li><a href="ueber-uns.html">Erlebnisse</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
       </nav>
     </header>
 
     <div class="ueberuns">
-      <h1>Geschichte</h1>
+      <h1>Erlebnisse rund um den Säntis</h1>
       <div class="timeline">
         <div class="event">
-          <h2>Gründung (2002)</h2>
-          <p>Unsere Reise begann im Jahr 2002, als wir unsere Organisation gegründet haben.</p>
+          <h2>Naturerlebnispark</h2>
+          <p>Der NaturErlebnispark ist die Heimat von vielen seltenen Vögeln und Säugetieren, Insekten und Faltern sowie Amphibien und Reptilien. Hier finden Sie einen, allerdings unvollständigen Einblick in die wundersame Alpen-Fauna.
+          </p>
         </div>
         <div class="event">
-          <h2>Meilenstein 1 (2005)</h2>
-          <p>Im Jahr 2005 haben wir unseren ersten wichtigen Meilenstein erreicht.</p>
+          <h2>Säntis - das Hotel</h2>
+          <p>Unsere 68 komfortablen und individuellen Zimmer und Junior-Suiten empfangen Sie für einen ruhigen und erholsamen Aufenthalt.
+            Ihr erster Blick am Morgen gilt dem steil aufragenden Säntis oder dem verträumten Weidwald.</p>
         </div>
         <div class="event">
-          <h2>Meilenstein 2 (2010)</h2>
-          <p>Im Jahr 2010 haben wir einen weiteren bedeutenden Meilenstein erreicht.</p>
+          <h2>Erlebniswelt auf dem Gipfel</h2>
+          <p>Der Säntis-Gipfel erweitert Ihren Horizont bei jedem Wetter. Tauchen Sie ein in unsere interaktive Erlebniswelt für Gross und Klein.
+            Es erwartet Sie Faszinierendes zu Wind und Wetter, Schnee und Eis sowie zur Geschichte der Schwebebahn.</p>
         </div>
         <div class="event">
-          <h2>Wichtiger Schritt (2020)</h2>
-          <p>Im Jahr 2020 haben wir einen weiteren wichtigen Schritt gemacht.</p>
+          <h2>Führungen</h2>
+          <p>Unsere Führungen ermöglichen Ihnen einen exklusiven Blick hinter die Kulissen. Lernen Sie Spannendes über den Säntisgipfel, das Hotel, die Bahnanlagen oder über die Natur auf der Schwägalp.</p>
         </div>
         <div class="event">
-          <h2>Neue Initiative (2021)</h2>
-          <p>Im Jahr 2021 haben wir eine neue Initiative gestartet.</p>
+          <h2>Seminar</h2>
+          <p>Planen Sie ein Seminar, ein Bankett, eine Tagung oder eine Familienfeier – bei uns sind Sie gut aufgehoben. Wir bieten ein attraktives Raum- und Übernachtungsangebot und für jeden Anlass den besten Rahmen. Wir setzen Ihre Wünsche in die Tat um.</p>
         </div>
         <div class="event">
-          <h2>Zukunftsvision (2023)</h2>
-          <p>Unsere Zukunftsvision für das Jahr 2023 steht fest.</p>
+          <h2>Laternliweg</h2>
+          <p>Romantische Winterwanderungen auf dem beleuchteten Laternliweg mit anschliessendem gemütlichem Fondueplausch – es erwartet Sie Ihr persönliches Wintermärchen! Der Laternliweg auf der Schwägalp ist von November bis März nach dem Eindunkeln geöffnet.</p>
         </div>
       </div>
     </div>
