--- a/kontakt.html
+++ b/kontakt.html
@@ -22,7 +22,7 @@
         <h1>Kontakt</h1>
         <p>Kontaktieren Sie uns über das folgende Formular:</p>
 
-        <form id="contact-form">
+        <form id="contact-formk">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
@@ -34,7 +34,7 @@
 
             <button type="submit">Absenden</button>
         </form>
-        <div id="confirmation-message" class="hidden">
+        <div id="confirmation-messagek" class="hidden">
             Vielen Dank! Ihre Nachricht wurde erfolgreich gesendet.
         </div>
     </div>
