--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -50,6 +50,16 @@
         </div>
       </div>
     </div>
+    <div class="newsletter-form">
+        <form id="newsletter-form">
+            <h2>Abonniere unseren Newsletter um nichts mehr zu verpassen</h2>
+            <input type="email" id="email" placeholder="Deine E-Mail-Adresse" required>
+            <button id="subscribe-button">Abonnieren</button>
+        </form>
+        <div id="confirmation-message" class="hidden">
+            Vielen Dank für deine Anmeldung!
+        </div>
+    </div>
     <script src="script.js"></script>
   </body>
 
