--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <img id="popupButton" src="button.svg" alt="Button" class="custom-button"style= "width: 140px; height: 140px;">
             <img id="popupButton2" src="button.svg" alt="Button" class="custom-button2"style= "width: 140px; height: 140px;">
             <img id="popupButton3" src="button.svg" alt="Button" class="custom-button3"style= "width: 140px; height: 140px;">
+            <img id="popupButton4" src="button.svg" alt="Button" class="custom-button4"style= "width: 140px; height: 140px;">
+        </div>
         </div>
     </div>
     <div id="popupContainer">
@@ -50,6 +52,13 @@
         </div>
     </div>
 
+    <div id="popupContainer4">
+        <div id="popupContent4">
+            <p>Die grösste Schweizerfahne der Welt wird jedes Jahr am 1. August an der Säntiswand ausgerollt. Die Idee zu dieser 80 auf 80 Meter grossen Nationalfeier-Deko ist aus dem dramaturgischen Stoff eines misslungenen Guinness-Weltrekords genäht worden, an dem Israel mitbeteiligt war.
+            </p>
+            <center><button id="closeButton4">Schließen</button></center>
+    </div>
+</div>
 
     <script src="script.js"></script>
 </body>
