--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         </nav>
     </header>
 
-    
+
     <div id="backgroundContainer">
+        <h1>Entdecke den Säntis und die Schwägalp</h1>
         <div id="illu">
             <img src="illu.svg" alt="Hintergrundbild">
             <img id="popupButton" src="button.svg" alt="Button" class="custom-button"style= "width: 140px; height: 140px;">
