--- a/kontakt.html
+++ b/kontakt.html
@@ -9,7 +9,9 @@
 <body class="page-contact">
 
     <header>
-        <a href="index.html" class="back-to-home">&#9666; Zurück zur Startseite</a>
+        <nav>
+            <a href="index.html" class="back-to-home">&#9666; Zurück zur Startseite</a>
+      <nav>
         <nav>
             <ul class="menu">
                 <li><a href="ueber-uns.html">Erlebnisse</a></li>
@@ -26,8 +28,8 @@
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
 
-            <label for="email">E-Mail:</label>
-            <input type="email" id="email" name="email" required>
+            <label for="emailk">E-Mail:</label>
+            <input type="emailk" id="emailk" name="emailk" required>
 
             <label for="message">Nachricht:</label>
             <textarea id="message" name="message" rows="4" required></textarea>
