--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <nav>
             <ul>
-                <li><a href="ueber-uns.html">Erlebnisse</a></li>
+                <li><a href="ueber-uns.html">Mehr Erlebnisse</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
@@ -20,7 +20,8 @@
 
 
     <div id="backgroundContainer">
-        <h1>Entdecke den Säntis und die Schwägalp</h1>
+        <h1>Entdecke den Säntis und die Schwägalp, 
+            indem du auf die roten Standorte klickst:</h1>
         <div id="illu">
             <img src="illu.svg" alt="Hintergrundbild">
             <img id="popupButton" src="button.svg" alt="Button" class="custom-button"style= "width: 140px; height: 140px;">
