--- a/kontakt.html
+++ b/kontakt.html
@@ -14,7 +14,7 @@
       <nav>
         <nav>
             <ul class="menu">
-                <li><a href="ueber-uns.html">Erlebnisse</a></li>
+                <li><a href="ueber-uns.html">Mehr Erlebnisse</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
         </nav>
@@ -22,7 +22,9 @@
 
     <div id="content">
         <h1>Kontakt</h1>
-        <p>Kontaktieren Sie uns über das folgende Formular:</p>
+        <p>Kontaktiere uns, falls du Fragen zum Säntis oder der Schwägalp hast. Deine Anfrage wird so schnell
+            als möglich bearbeitet.
+        </p>
 
         <form id="contact-formk">
             <label for="name">Name:</label>
