--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -12,7 +12,7 @@
             <a href="index.html" class="back-to-home">&#9666; Zurück zur Startseite</a>
       <nav>
         <ul class="menu">
-            <li><a href="ueber-uns.html">Erlebnisse</a></li>
+            <li><a href="ueber-uns.html">Mehr Erlebnisse</a></li>
             <li><a href="kontakt.html">Kontakt</a></li>
         </ul>
       </nav>
@@ -52,7 +52,7 @@
     </div>
     <div class="newsletter-form">
         <form id="newsletter-form">
-            <h2>Abonniere unseren Newsletter um nichts mehr zu verpassen</h2>
+            <h2>Abonniere unseren Newsletter um keine neuen Erlebnisse mehr zu verpassen</h2>
             <input type="email" id="email" placeholder="Deine E-Mail-Adresse" required>
             <button id="subscribe-button">Abonnieren</button>
         </form>
